
add_executable(ThreadPool_test ThreadPool_test.cc)
target_link_libraries(ThreadPool_test server_base)

add_executable(TimeZone_test TimeZone_test.cc)
target_link_libraries(TimeZone_test server_base)

add_executable(ThreadLocalSingleton_test ThreadLocalSingleton_test.cc)
target_link_libraries(ThreadLocalSingleton_test server_base)

add_executable(Thread_test Thread_test.cc)
target_link_libraries(Thread_test server_base)

add_executable(AsyncLogging_test AsyncLogging_test.cc)
target_link_libraries(AsyncLogging_test server_base)

add_executable(ThreadLocal_test ThreadLocal_test.cc)
target_link_libraries(ThreadLocal_test server_base)

add_executable(Singleton_test Singleton_test.cc)
target_link_libraries(Singleton_test server_base)

add_executable(ProcessInfo_test ProcessInfo_test.cc)
target_link_libraries(ProcessInfo_test server_base)

add_executable(Threadbench_test Threadbench_test.cc)
target_link_libraries(Threadbench_test server_base)